--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     <div class="movies_container">
         <ul id="films"></ul>
       </div>
+      <div id="ticket-details">
+        <p id="ticket-availability"></p>
+        <button id="buy-ticket">Buy tickets</button>
+      </div>
     <script src="./index.js"></script>
   </body>
 </html>
